# waybar-bluetooth-headphone-battery

./: Cargo.toml  LICENSE  README.md
src/: main.rs
