[package]
name = "waybar-bluetooth-headphone-battery"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4.4.6", features = ["derive"] }
humantime = "2.1.0"
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2.17"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
strum = { version = "0.26.3", features = ["derive"] }
textwrap = { version = "0.16.0", features = ["terminal_size"] }
tokio = { version = "1.33.0", features = [
  "macros",
  "rt-multi-thread",
  "time",
  "signal",
] }
tokio-stream = "0.1.14"
upower_dbus = "0.3.2"
zbus = { version = "3.14.1", default-features = false, features = ["tokio"] }
